# felts

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.agent-rig/_shared/: context.md  session.json
.agent-rig/_shared/handoff_logs/: 2026-07-23-2235_unknown_codex_worker.md  2026-07-23-2301_unknown_codex_worker.md  2026-07-24-0413_unknown_codex_worker.md  2026-07-24-1121_unknown_codex_worker.md  2026-07-24-1152_unknown_codex_worker.md
.agent-rig/_shared/skills/: skills-lock.json
.agent-rig/_shared/tasks/: task-0001_phase-09-schema-qualified-mcp-allowlist.md  task-0002_phase-09-schema-aware-production-access-grants.md  task-0003_phase-09-local-verification-for-schema-qualified-mcp.md  task-0004_phase-09-live-mcp-acceptance-and-close-out.md  task-0005_phase-10-agent-pipe-sqlite-extractor-contract.md  task-0006_phase-10-raw-writer-runner-and-cli-import.md  task-0007_phase-10-updated-since-and-failure-coverage.md  task-0008_phase-10-sample-sqlite-acceptance-close-out.md  task-0009_phase-11-felts-internal-assets-and-provider-mappings.md  task-0010_phase-11-coingecko-broad-mart-completion.md  task-0011_phase-11-alphavantage-and-csv-marts.md  task-0012_phase-11-dbt-verification-and-doc-close-out.md
.github/workflows/: ci.yml
docker/postgres/: Dockerfile
docker/postgres/init/: 00-create-databases.sql  10-create-raw-records.sql
docs/: 2026-06-18-2205__codex_019ed47e-d5b5-7190-8fa0-aed724601119.md  architecture.md  implementation_phases.md  linux_production_deployment.md  project_specs.md
docs/_archived/: 2026-06-18-2205__codex_019ed47e-d5b5-7190-8fa0-aed724601119.md  2026-06-24-1903_019eef87-008f-72a0-948b-655289233685_codex.md  2026-06-26-1427_phase-09-prod-data-mcp_handoff.md  phase_00_project_scaffolding.md  phase_01_core_contracts.md  phase_05_additional_source_patterns.md  phase_07_advanced_capabilities.md  phase_08_source_scaffolding.md  phase_10_agent_pipe_sqlite_ingestion.md  phase_11_analytical_marts_and_internal_assets.md
docs/adr/: 0001-raw-landing-design.md  0002-provider-schema-transform-layout.md  0003-yaml-driven-csv-import-contracts.md  0004-environment-specific-settings-files.md  0005-felts-owned-production-data-mcp.md
docs/mcp/: felts-prod-data.md
docs/phases/: phase_01_core_contracts.md  phase_02_first_source_vertical_slice.md  phase_03_dbt_transform_foundation.md  phase_04_prefect_orchestration.md  phase_05_additional_source_patterns.md  phase_06_operational_hardening.md  phase_07_advanced_capabilities.md  phase_09_production_data_agent_access.md  phase_11_analytical_marts_and_internal_assets.md
docs/runbooks/: local_operations.md
scripts/: deploy-linux-mint.sh  felts-prod-data-mcp  manage-prod-data-access.sh  scaffold.py  update-prod-data-access.sh
settings/: .env.dev.example  .env.local.example  .env.mcp.example  .env.prod.example  felts-prod-data-views.txt
src/felts/: __init__.py  cli.py  prod_data_mcp.py
src/felts/config/: __init__.py  settings.py
src/felts/core/: __init__.py  exceptions.py
src/felts/core/extractors/: __init__.py  base.py  csv.py  rest.py
src/felts/core/loaders/: __init__.py  base.py  factory.py  postgres.py  writer.py
src/felts/core/schemas/: __init__.py  extracted_record.py  identifiers.py  raw_record.py  (+1 more)
src/felts/flows/: coingecko.py  master.py  transform.py
src/felts/schedules/: orchestrator.py
tests/fixtures/csv_import/: crypto-ohlcv-bitcoin-20260528.csv  fred_series.csv
tests/integration/: test_postgres_loader.py
tests/unit/: test_core_contracts.py  test_deploy_script_guards.py  test_loader_factory.py  test_master_flow.py  test_prod_data_mcp.py  test_raw_identity.py  test_raw_writer.py  test_scaffold.py  test_schema_registry.py  test_source_scaffold.py  test_top_level_cli.py
transforms/: .user.yml  dbt_project.yml  profiles.yml.example
transforms/macros/: generic_tests.sql
transforms/models/sources/: alphavantage.yml  coingecko.yml  csv_import.yml
transforms/seeds/felts/: asset_provider_mappings.csv  internal_asset_platforms.csv  internal_assets.csv
(+75 files in other folders)
