[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "felts"
version = "0.1.0"
description = "Financial ELT Stacks"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "PyYAML>=6.0.0",
]

[project.scripts]
felts = "felts.sources.coingecko.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.8.0",
]
orchestration = [
    "fastapi<0.137",
    "prefect>=3.1.0",
    "prefect-dbt>=0.6.0",
]
dbt = [
    "dbt-core>=1.8.0",
    "dbt-postgres>=1.8.0",
]
postgres = [
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
]
finance = [
    "ccxt>=4.4.0",
    "statsmodels>=0.14.0",
    "yfinance>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/felts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["src/felts", "tests"]
strict = true
plugins = ["pydantic.mypy"]
